# tddnnf-testbench

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: investigation.json
data/benchmark/omtplan/h2/Majsp/: 1_1_2_1.smt2  1_1_2_2.smt2  1_1_2_3.smt2  1_1_2_4.smt2  1_1_3_1.smt2  1_1_3_2.smt2  1_1_3_3.smt2  1_1_3_4.smt2  1_1_4_1.smt2  1_1_4_2.smt2  1_1_4_3.smt2  1_1_4_4.smt2  1_1_5_1.smt2  1_1_5_2.smt2  1_1_5_3.smt2  1_1_5_4.smt2  1_1_6_1.smt2  1_1_6_2.smt2  1_1_6_3.smt2  1_1_6_4.smt2  1_2_2_1.smt2  1_2_2_2.smt2  1_2_2_3.smt2  1_2_2_4.smt2  1_2_3_1.smt2  1_2_3_2.smt2  1_2_3_3.smt2  1_2_3_4.smt2  1_2_4_1.smt2  1_2_4_2.smt2  1_2_4_3.smt2  1_2_4_4.smt2  1_2_5_1.smt2  1_2_5_2.smt2  1_2_5_3.smt2  1_2_5_4.smt2  1_2_6_1.smt2  1_2_6_2.smt2  1_2_6_3.smt2  1_2_6_4.smt2  (+40 more)
data/benchmark/omtplan/h2/MajspSimplified/: 1_1_2_1.smt2  1_1_2_2.smt2  1_1_2_3.smt2  1_1_2_4.smt2  1_1_3_1.smt2  1_1_3_2.smt2  1_1_3_3.smt2  1_1_3_4.smt2  1_1_4_1.smt2  1_1_4_2.smt2  1_1_4_3.smt2  1_1_4_4.smt2  1_1_5_1.smt2  1_1_5_2.smt2  1_1_5_3.smt2  1_1_5_4.smt2  1_1_6_1.smt2  (+63 more)
scripts/: benchmark_controller.py  clean_omtplan_problems.py  extract_benchmark_files.py  find_problems_with_high_allsmt_time.py  merge_tlemmas_results.py  test_ddnnife_pmc.py  timeout_investigation.py
scripts/plots/: aggregate_tlemmas_generation_and_compilation_time.py  compare_tbdd_creation_time.py  compare_tddnnf_compilation_time.py  compare_tlemmas_generation_time.py  compare_tsdd_creation_time.py  plot_cactus_dd_compilation_bar_plot.py  plot_cactus_tddnnf_aggregated_tlemmas_and_comp_time.py  plot_query_ce_time.py  plot_query_mc_time.py  plot_query_mc_ua_time.py
scripts/tasks/: compile_task.py  nnf_utils.py  query_ce_task.py  query_mc_task.py  query_mc_ua_task.py  query_utils.py  tabularallsat.py  tbdd_task.py  tddnnf_task.py  tlemmas_check.py  tsdd_task.py
(+340 files in other folders)
